--- a/src/main/resources/templates/note-create.html
+++ b/src/main/resources/templates/note-create.html
@@ -20,7 +20,7 @@
 <form class="note-create" action="/note/save" method="post">
     <p>Title <input type="text" class="title" value="" name="setNameNotes" id="setNameNotes"></p>
 
-    <p><textarea class="content-area" rows="20" cols="80" placeholder="Enter your note here..." name="setContent"
+    <p><textarea class="content-area" rows="10" cols="50" maxlength="100" minlength="5" placeholder="Enter your note here..." name="setContent"
                  id="setContent"></textarea></p>
     <div class="bottom">
         <ul class="bottom-list">
